<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:backgroundTint="#fff"
    tools:context=".AddNewExpenseActivity">

    <ImageView
        android:id="@+id/LogoExpense"
        android:layout_width="78dp"
        android:layout_height="86dp"
        android:layout_marginTop="4dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_logo_expense" />

    <TextView
        android:id="@+id/Expense_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:text="@string/title_AddNewExpenseActivity"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoExpense" />

    <EditText
        android:id="@+id/AmountInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shapeinput"
        android:ems="10"
        android:hint="@string/input_amount_AddNewExpenseActivity"
        android:inputType="text"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAmount" />

    <TextView
        android:id="@+id/textAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/amount_AddNewExpenseActivity"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Expense_Text" />


    <RadioGroup
        android:id="@+id/choose_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AmountInput">

        <RadioButton
            android:id="@+id/USDButton"
            android:layout_width="69dp"
            android:layout_height="32dp"

            android:layout_marginTop="10dp"
            android:text="USD"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AmountInput" />

        <RadioButton
            android:id="@+id/KHRButton"
            android:layout_width="79dp"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="12dp"
            android:text="KHR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/USDButton"
            app:layout_constraintTop_toBottomOf="@+id/AmountInput" />

    </RadioGroup>

    <TextView
        android:id="@+id/textCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/category_AddNewExpenseActivity"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_current" />

    <Spinner
        android:id="@+id/CategoryInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shapeinput"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCategory"/>

    <TextView
        android:id="@+id/Remark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/remark_AddNewExpenseActivity"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DateInput" />

    <EditText
        android:id="@+id/RemarkInput"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shapeinput"
        android:ems="10"
        android:hint="@string/input_remark_AddNewExpenseActivity"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Remark" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/date_AddNewExpenseActivity"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CategoryInput" />

    <EditText
        android:id="@+id/DateInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shapeinput"
        android:ems="10"
        android:hint="@string/input_date_AddNewExpenseActivity"
        android:inputType="date"
        android:padding="15dp"
        app:layout_constraintEnd_toStartOf="@+id/imageCalender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CategoryInput" />

    <ImageView
        android:id="@+id/imageCalender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shapeinput"
        android:padding="10dp"
        android:src="@drawable/ic_calender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDate" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shapeinput"
        android:contentDescription="TODO"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCategory"
        app:srcCompat="@drawable/ic_addcategories" />

    <EditText
        android:id="@+id/timeinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="136dp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/LogoExpense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/expense_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_add_newCartegory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_AddNewCartegory"/>
            <EditText
                android:id="@+id/inputNewCartegory"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="3dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/input_newCartegory"
                android:background="@drawable/shapeinput"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/btn_addCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="3dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/btn_add_AddNewCartegory"/>
                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="3dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/btn_cancel_AddNewCartegory"/>
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_Addexpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shap_btn"
        android:padding="10dp"
        android:text="@string/add_expense_button_AddNewExpenseActivity"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RemarkInput" />


</androidx.constraintlayout.widget.ConstraintLayout>